<?xml version="1.0"?>
<package>
  <name> eus_fftw </name>
  <description>
    fftw package
  </description>
  <version>0.1.4</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>LGPL</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libfftw3</build_depend>
<!--  <build_depend>soundtouch</build_depend>  -->
  <build_depend>eigen</build_depend>
  <run_depend>euslisp</run_depend>
  <run_depend>libfftw3</run_depend>
  <run_depend>eigen</run_depend>
</package>
